src/style.css
body {
    text-align: center;
    background-color: #0C131F;
    text-rendering: optimizeLegibility;
}
.info {
    display: flex;
    flex-direction: column;
    margin-top: 140px;
    line-height: 0.1;
    text-align: center;
    font-family: 'Share Tech Mono', monospace;
}
.mode_class{
    position: absolute;
    top: 0;
    right: 0;
    margin-top: 20px;
    margin-right: 20px;
}
#mode {
   filter: invert(100%) sepia(0%) saturate(1620%) hue-rotate(8deg) brightness(94%) contrast(88%)
}
#mode:hover {
    filter: invert(56%) sepia(45%) saturate(6917%) hue-rotate(173deg) brightness(96%) contrast(82%) !important
}
a:visited, a:link, a:active {
    color: #bbb;
    text-decoration: none;
    font-size: 26px;
    text-indent: 2px;
    line-height: 1.5;
}
#time {
    font-size: 28px;
    color: #77B8F8;
}
#greeting {
    font-size: 32px;
}
#input {
    width: 500px;
    padding: 10px;
    font-size: 16px;
    text-align: center;
    outline: none;
    border: none;
    background: transparent;
}
#input:hover, #input:focus {
    border-color: #03C0DD !important;
}
.grid-container {
    height: 28px;
    padding-top: 20px;
    margin-left: 14%;
    display: grid;
    opacity: 1;
    gap: 12px 12px;
    text-align: center;
    justify-content: center;
    grid-template-columns: repeat(8, 8%);
    grid-template-rows: repeat(2, 1fr);
    transition: opacity .5s;
}
.icon-container {
    text-align: center;
}
.icon-container a, .icon-container button {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.icon-container i {
    font-size: 28px;
    border-radius: 50%;
    padding: 12px;
    height: 28px;
    width: 28px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s;
}
.icon-container span {
    font-size: 14px;
    font-weight: bold;
    transition: color 0.3s;
    padding-top: 10px;
    font-family: 'Overpass Mono', monospace;
}
.github i, .github:hover span {
    color: #c0e8fa !important;
}
.gitlab i, .gitlab:hover span  {
    color: #E24329 !important;
}
.telegram i, .telegram:hover span {
    color: #0088cc !important;
}
.itch i, .itch:hover span {
    color: #f68f1e !important;
}
.protonmail i, .protonmail:hover span {
    color: #a25c9a !important;
}
.nextdns i, .nextdns:hover span {
    color: #00A3E0 !important;
}

